<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:columnCount="3"
    android:useDefaultMargins="true"
    android:padding="@dimen/padding_grid"
    tools:context="com.example.gencay.vucutkitleindeksi.vucutKitleIndeksi">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/boy_tv"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="3"
        android:id="@+id/editText"
        android:layout_row="0"
        android:layout_column="1"
        android:autoText="false"
        android:background="@color/accent_material_dark"
        android:layout_gravity="fill_horizontal|center_vertical" >
        <requestFocus/>

    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:id="@+id/boy_tv"
        android:layout_row="0"
        android:layout_column="1"
        android:padding="@dimen/padding_tv"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/kilo_tv"
        android:id="@+id/textView3"
        android:layout_gravity="center_vertical|right"
        android:layout_row="1"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:layout_column="1"
        android:progress="20"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/kilo_tv"
        android:layout_row="2"
        android:layout_column="1"
        android:text="50 kg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cinsiyet"
        android:id="@+id/textView4"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/radioGrup"
        >


        <RadioButton android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bay"
            android:id="@+id/bay"

            android:checked="true" />

        <RadioButton android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/bayan"
            android:id="@+id/bayan"


            />



    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ideal_kilo_tv"
        android:id="@+id/textView6"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ideal_tv"
        android:layout_row="4"
        android:layout_gravity="fill_horizontal"
        android:layout_column="1"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/durum"
        android:id="@+id/textView8"
        android:layout_row="5"
        android:layout_column="0"

        android:layout_gravity="right|center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/durum_tv"
        android:layout_row="5"
        android:layout_gravity="fill_horizontal"
        android:layout_column="1"
        android:padding="@dimen/padding_tv"
        android:background="@android:color/holo_orange_dark" />

    <Space/>

</GridLayout>
